@@ -1540,6 +1540,7 @@ endif::[]
 
 * fix: Support for PCRetriableException in ReactorProcessor (#733)
 * fix: remove lingeringOnCommitWouldBeBeneficial and unused imports (#732)
+* fix: Fix failing auto-commit check for kafka-clients >= v3.7.0 (#721)
 
 === Improvements
 
